# ELDAS-BACKEND-Initial-backend-setup-with-FastAPI-AI-OCR

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/versions/: 20260329_0001_initial.py
app/: __init__.py  main.py
app/ai/: __init__.py  cognitive_engine.py  llm_engine.py  prompt_templates.py
app/api/: router.py
app/api/dependencies/: auth.py
app/api/routes/: auth.py  classrooms.py  evaluations.py  notifications.py  parent.py  (+4 more)
app/core/: config.py  security.py
app/db/: base.py  session.py
app/middleware/: request_context.py
app/models/: base.py  classroom.py  evaluation.py  notification.py  progress.py  submission.py  test.py  user.py
app/repositories/: classroom_repository.py  evaluation_repository.py  notification_repository.py  progress_repository.py  submission_repository.py  test_repository.py  user_repository.py
app/schemas/: auth.py  classroom.py  evaluation.py  notification.py  parent.py  progress.py  submission.py  teacher.py  test.py  user.py
app/services/: auth_service.py  classroom_service.py  dashboard_service.py  evaluation_service.py  notification_service.py  ocr_service.py  progress_service.py  storage_service.py  submission_service.py  test_service.py
app/utils/: __init__.py  enums.py  score.py
eldas-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts
eldas-frontend/e2e/: full-flow.spec.ts
eldas-frontend/src/: index.css  main.tsx
scripts/: prepare_e2e_db.py  run_e2e_backend.ps1
(+80 files in other folders)
